# nn-framework

./: .gitignore  README.md  pyproject.toml
src/framework/: layers.py  model.py
src/testes/: MNIST_classification.ipynb  conftest.py  gradient_check.ipynb  gradient_check_conv.ipynb  test_edge_cases.py  test_layers.py  test_losses_metrics.py  test_model_state.py  test_training.py
